--- a/WTP Application Project Files/src/Events-TenantUserApp/appsettings.json
+++ b/WTP Application Project Files/src/Events-TenantUserApp/appsettings.json
@@ -2,7 +2,7 @@
   "BlobPath": "https://wingtipsaas.blob.core.windows.net/images/",
   "ConnectionTimeOut": "100",
   "CatalogDatabase": "tenantcatalog",
-  "CatalogServer": "catalog-dpt-dm1",
+  "CatalogServer": "catalog-ayo13-recovery",
   "DatabasePassword": "P@ssword1",
   "DatabaseServerPort": "1433",
   "DatabaseUser": "developer",
@@ -25,7 +25,7 @@
   },
   "DefaultRequestCulture": "en-US",
   "ServicePlan": "Standard",
-  "TenantServer": "tenants1-dpt-dm1",
+  "TenantServer": "tenants1-ayo13-recovery",
   "ResetEventDates": true,
   "LearnHowFooterUrl": "https://aka.ms/sqldbsaastutorial",
   "ASPNETCORE_ENVIRONMENT": "Development"
