--- a/WTP Application Project Files/src/Events-TenantUserApp/project.fragment.lock.json
+++ b/WTP Application Project Files/src/Events-TenantUserApp/project.fragment.lock.json
@@ -5,7 +5,7 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.5.2",
       "compile": {
-        "bin/Release/Events-Tenant.Common.dll": {}
+        "bin/Debug/Events-Tenant.Common.dll": {}
       },
       "runtime": {
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
@@ -25,10 +25,10 @@
         "../../packages/System.Interactive.Async.3.0.0/lib/net45/System.Interactive.Async.dll": {},
         "../../packages/System.Runtime.CompilerServices.Unsafe.4.3.0/lib/netstandard1.0/System.Runtime.CompilerServices.Unsafe.dll": {},
         "../../packages/System.Runtime.InteropServices.RuntimeInformation.4.3.0/lib/net45/System.Runtime.InteropServices.RuntimeInformation.dll": {},
-        "bin/Release/Events-Tenant.Common.dll": {}
+        "bin/Debug/Events-Tenant.Common.dll": {}
       },
       "contentFiles": {
-        "bin/Release/Events-Tenant.Common.pdb": {
+        "bin/Debug/Events-Tenant.Common.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
@@ -39,7 +39,7 @@
       "type": "project",
       "framework": ".NETFramework,Version=v4.5.2",
       "compile": {
-        "bin/Release/Events-TenantUserApp.EF.dll": {}
+        "bin/Debug/Events-TenantUserApp.EF.dll": {}
       },
       "runtime": {
         "../../packages/EntityFramework.6.1.3/lib/net45/EntityFramework.SqlServer.dll": {},
@@ -72,10 +72,10 @@
         "../../packages/System.Runtime.CompilerServices.Unsafe.4.3.0/lib/netstandard1.0/System.Runtime.CompilerServices.Unsafe.dll": {},
         "../../packages/System.Runtime.InteropServices.RuntimeInformation.4.3.0/lib/net45/System.Runtime.InteropServices.RuntimeInformation.dll": {},
         "../../packages/System.Text.Encodings.Web.4.3.0/lib/netstandard1.0/System.Text.Encodings.Web.dll": {},
-        "bin/Release/Events-TenantUserApp.EF.dll": {}
+        "bin/Debug/Events-TenantUserApp.EF.dll": {}
       },
       "contentFiles": {
-        "bin/Release/Events-TenantUserApp.EF.pdb": {
+        "bin/Debug/Events-TenantUserApp.EF.pdb": {
           "buildAction": "None",
           "codeLanguage": "any",
           "copyToOutput": true
