Adding alias changes to Wingtip app
Additionally adding catalog sync tables to EF models

--- a/Learning Modules/Business Continuity and Disaster Recovery/DR-RestoreFromBackup/RecoveryTemplates/webapprecoverytemplate.json
+++ b/Learning Modules/Business Continuity and Disaster Recovery/DR-RestoreFromBackup/RecoveryTemplates/webapprecoverytemplate.json
@@ -101,7 +101,7 @@
                 "DatabasePassword": "P@ssword1",
                 "DatabaseServerPort": "1433",
                 "DatabaseUser": "developer",
-                "ResetEventDates": "true",
+                "ResetEventDates": "false",
                 "ServicePlan": "Standard",
                 "SqlProtocol": "tcp",
                 "TenantServer": "[parameters('tenantsRecoveryServer')]",
