--- a/WTP Application Project Files/src/Events-TenantUserApp/appsettings.json
+++ b/WTP Application Project Files/src/Events-TenantUserApp/appsettings.json
@@ -1,8 +1,9 @@
 ﻿{
-  "BlobPath": "https://wingtipsaas.blob.core.windows.net/images/",
+  "BlobPath": "https://wingtipsaas.blob.core.windows.net/images-dpt/",
   "ConnectionTimeOut": "100",
+  "CatalogAlias":  "catalog-ayo9",
   "CatalogDatabase": "tenantcatalog",
-  "CatalogServer": "catalog-dpt-home-ayo10",
+  "CatalogServer": "catalog-dpt-ayo9-home",
   "DatabasePassword": "P@ssword1",
   "DatabaseServerPort": "1433",
   "DatabaseUser": "developer",
@@ -25,11 +26,11 @@
   },
   "DefaultRequestCulture": "en-US",
   "ServicePlan": "Standard",
-  "TenantServer": "tenants1-dpt-home-ayo10",
-  "ContosoConcertHallAlias": "contosoconcerthall-ayo10",
-  "FabrikamJazzClubAlias": "fabrikamjazzclub-ayo10",
-  "DogwoodDojoAlias": "dogwooddojo-ayo10",
+  "TenantServer": "tenants1-dpt-ayo9-home",
   "ResetEventDates": true,
+  "ContosoConcertHallAlias": "contosoconcerthall-ayo9",
+  "FabrikamJazzClubAlias": "fabrikamjazzclub-ayo9",
+  "DogwoodDojoAlias": "dogwooddojo-ayo9",
   "LearnHowFooterUrl": "https://aka.ms/sqldbsaastutorial",
   "ASPNETCORE_ENVIRONMENT": "Development"
 }
