--- a/WTP Application Project Files/src/Events-TenantUserApp/web.config
+++ b/WTP Application Project Files/src/Events-TenantUserApp/web.config
@@ -10,5 +10,8 @@
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" forwardWindowsAuthToken="false"/>
+    <applicationInitialization remapManagedRequestsTo="loading.html" doAppInitAfterRestart="true" skipManagedModules="true">
+      <add initializationPage="/" />
+    </applicationInitialization>
   </system.webServer>
 </configuration>
